--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
 {
-  "packageManager": "yarn@3.2.0"
+  "name": "ts-mono-repo",
+  "packageManager": "yarn@3.2.0",
+  "devDependencies": {
+    "@types/node": "^17.0.29",
+    "typescript": "^4.6.3"
+  }
 }
