--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "ts-mono-repo",
+  "private": true,
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
     "@types/node": "^17.0.29",
     "typescript": "^4.6.3"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
