--- a/packages/react-web-app/package.json
+++ b/packages/react-web-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "@mono/react-component": "workspace:*",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "typescript": "^4.6.3"
