--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mono/theme",
+  "main": "./src/index.ts",
   "version": "0.0.2",
   "packageManager": "yarn@3.2.0",
   "dependencies": {
