--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
     "@types/node": "^17.0.29",
+    "@types/prettier": "^2",
     "lerna": "^4.0.0",
     "typescript": "^4.6.3"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "prettier": "^2.6.2"
+  }
 }
