--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": ">=7",
     "lerna": "^4.0.0",
+    "lint-staged": ">=10",
     "typescript": "^4.6.3"
   },
   "workspaces": [
@@ -25,5 +27,11 @@
   ],
   "dependencies": {
     "prettier": "^2.6.2"
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx,jsx}": "eslint --cache --fix"
+  },
+  "scripts": {
+    "postinstall": "husky install"
   }
 }
